cedar-lean/UnitTest/parser_tests/negative/eq_instead_of_double_eq.cedar
permit(principal, action, resource) when { context.x = 1 };
